# orangeme

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  PlatformPaths  README.md  analysis_options.yaml  build.rs  cache.db  flutter_native_splash.yaml  libmain.dylib  package-lock.json  package.json  pubspec.yaml  text_bauble.dart
NewLib/: interfaces.txt
android/: build.gradle  pubspec.yaml  settings.gradle
android/android/app/: build.gradle
android/app/: CMakeLists.txt  build.gradle
apple/: LaunchScreenMobile.storyboard  Makefile
apple/apple-src/: Camera.swift  Info.plist  Notifications.swift  PlatformPaths.swift  bindings.h  cargo_apple-Bridging-Header.h
apple/apple.xcodeproj/: project.pbxproj
assets/: CameraHelper.java  javacompiler.sh
debian/: background
flow_bitcoin/: pubspec.yaml
flow_bitcoin/lib/: amount.dart  confirm.dart  flow_bitcoin.dart  home.dart  receive.dart  scan_qr.dart  send.dart  speed.dart  success.dart  view_transaction.dart
flow_messages/: analysis_options.yaml  pubspec.yaml
flow_messages/lib/: choose_recipient.dart  conversation.dart  flow_messages.dart  home.dart  info.dart
flow_profiles/: pubspec.yaml
flow_profiles/lib/: flow_profiles.dart  my_profile.dart  user_profile.dart
integration_test/: intergration_test.dart  simple_test.dart
ios/: Makefile
ios/Runner/: AppDelegate.swift  Info.plist  NodeRunner.h  NodeRunner.mm  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/ios-src/: Camera.swift  Info.plist  Notifications.swift  PlatformPaths.swift  iOSCamera.swift  main.m  rust_bindings.h
ios/ios.xcodeproj/: project.pbxproj
ios/nodejs/: package.json
ios/wgpu_mobile.xcodeproj/: project.pbxproj
js/: browser.js  index.html  index.js
lib/: bip39_wordlist.dart  classes.dart  definitions.txt  ella_definitions.txt  ella_definitions2.txt  error.dart  frb_generated.dart  generic.dart  global.dart  loading.dart  main.dart  navigation.dart  state.dart  storage.dart  temp_classes.dart  test.dart  util.dart
lib/V2/: DashBoard.dart
lib/classes/: contact_info.dart  message_info.dart  profile_info.dart  single_message.dart  test_classes.dart  transaction_details.dart
lib/components/: amount_display.dart  banner.dart  bumper.dart  button.dart  content.dart  data_item.dart  default_interface.dart  desktopTabNav.dart  header.dart  interface.dart  list_item.dart  list_item_group.dart  list_selector.dart  message_bubble.dart  message_bubbles.dart  message_item_group.dart  numeric_keypad.dart  paginator.dart  payment_options.dart  placeholder.dart  profile_photo.dart  qr_scanner.dart  radio.dart  radio_selectors.dart  result.dart  shake.dart  sidebar.dart  tab_navigator.dart  tabular.dart  tabular_group.dart  text_input.dart  textfield.dart  tip_buttons.dart  transaction_details.dart  value_display.dart
lib/components/btc_value/: btc_value.dart
lib/interfaces/: default_interface.dart
lib/qr_code/: qr_code.dart
lib/screens/: error.dart  init.dart  loading.dart  splashscreen.dart
lib/styles/: constants.dart  enums.dart  theme.dart
lib/theme/: border.dart  custom_button.dart  custom_icon.dart  custom_text.dart  logo.dart  stylesheet.dart
lib/widgets/: DashBoardNavBar.dart  contact_card.dart  dashboard_value.dart  fee_selector.dart  keyboard_value_display.dart  list_item_group.dart  long_button.dart  message_appbar.dart  message_history_card.dart  message_item.dart  mode_navigator.dart  numberpad.dart  receive_send.dart  session_timer.dart  text_bauble.dart  textfield.dart  transaction_details.dart  transaction_list.dart  value_display.dart
libtxt/: pages.txt  theme.txt  widget.txt
libtxt/Components/: headers.txt
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
material/: .metadata  pubspec.yaml
material/lib/: button.dart  color.dart  data_item.dart  headers.dart  icon.dart  icon_button.dart  interface.dart  keypad.dart  list_item.dart  list_selector.dart  material.dart  message_bubble.dart  navigation.dart  notifications.dart  profile.dart  shake.dart  sizes.dart  tab_navigator.dart  tabular.dart  text.dart  text_input.dart  theme.dart
material/test/: orangeme_material_test.dart
orange/: LaunchScreen.storyboard  LaunchScreenDesktop.storyboard
orange/apple-src/: Info.plist  bindings.h  main.m
orange/orange.xcodeproj/: project.pbxproj
orangeme_material/: CHANGELOG.md  README.md  pubspec.yaml
orangeme_material/lib/: button.dart  color.dart  generic.dart  headers.dart  icon.dart  icon_button.dart  interface.dart  listener.dart  logo.dart  navigation.dart  notifications.dart  orangeme_material.dart  padding.dart  profile.dart  shake.dart  text.dart  text_input.dart  theme.dart
orangeme_material/test/: orangeme_material_test.dart
pkg/: .gitignore  README.md  index.html  main.d.ts  main.js  main_bg.wasm  main_bg.wasm.d.ts  package.json
resources/duck/: Untitled-1.ai
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: .simple.rs.un~  callback.rs  custom_handler.rs  error.rs  mod.rs  old-price.rs  price.rs  protocols.rs  pub_structs.rs  simple.rs  state.rs  state_manager.rs  storage.rs  structs.rs  threads.rs  usb.rs  utils.rs  wallet.rs  web5.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_orange.podspec  rust_lib_testingo.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_orange.podspec  rust_lib_testingo.podspec
rust_builder/windows/: CMakeLists.txt
src/: air.rs  bdk.rs  build.rs  canvas.rs  flows.rs  framework.rs  lib.rs  main.rs  msg.rs  test.rs  wgpu.rs  window.rs
src/flows/: accounts.rs  bitcoin.rs  messages.rs  profiles.rs  rooms.rs
test/: widget_test.dart
test_dir/: kvs.db
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+334 files in other folders)
