[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
openssl = { version = "*", features = ["vendored"] }
bdk = { version = "0.29.0", default-features = false, features = ["std", "use-esplora-blocking", "sqlite", "key-value-db", "electrum"] }
flutter_rust_bridge = "=2.0.0-dev.37"
#bitcoin = "0.32.0"
serde = "1.0.192"
serde_json = "1.0.108"
thiserror = "1.0"
hex = "0.4.3"
reqwest = { version = "0.12.4", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

futures = "0.3.30"
rand = "0.8.5"
