[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
openssl = { version = "*", features = ["vendored"] }
bdk = { version = "0.29.0", default-features = false, features = ["std", "use-esplora-blocking", "sqlite", "key-value-db", "electrum"] }
flutter_rust_bridge = {version= "=2.6.0", features=["log"]}
secp256k1 = { version ="0.29.0", features = ["rand"] }
bitcoin = "0.32.0"
serde = "1.0.192"
serde_json = "1.0.108"
thiserror = "1.0"
hex = "0.4.3"
reqwest = {version = "0.12.4", features = ["json"]}
web5-rust = {path="../../web5-rust"}#"1.1.8"

futures = "0.3.30"
chrono = "0.4.38"
tokio = "1.38.0"
simple-database = {version="1.1.3", features = ["rusqlite"]}
num-format = "0.4"
schemars = "0.8.21"
log = "0.4.22"
lazy_static = "1.5.0"
threadpool = "1.8.1"
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = "0.2.0"
